--- a/assets/css/style08.css
+++ b/assets/css/style08.css
@@ -1,3 +1,45 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+main {
+    background-image: url("https://images.pexels.com/photos/914390/pexels-photo-914390.jpeg?auto=compress&cs=tinysrgb&w=600");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 1000px;
+}
+.function {
+  background-color: rgb(29, 29, 29);
+  color: whitesmoke;
+  padding: 45px;
+  font-weight: 700;
+  font-size: 1rem;
+  text-transform: uppercase;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  flex-wrap: nowrap;
+}
+.name {
+  font-family: "LXGW WenKai Mono TC";
+  margin-right: auto;
+  font-size: 1.3rem;
+}
+.contacts {
+  margin-left: auto;
+}
+.btn-contacts {
+  background-color: transparent;
+  color: whitesmoke;
+  text-decoration: none;
+  padding: 15px;
+  border: 2px solid whitesmoke;
+  border-radius: 5px;
+  font-weight: 600;
 }
