--- a/assets/css/style08.css
+++ b/assets/css/style08.css
@@ -8,11 +8,22 @@
 main {
     background-image: url("https://images.pexels.com/photos/914390/pexels-photo-914390.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-repeat: no-repeat;
-    background-size: contain;
-    height: 1000px;
+    background-size: cover;
+    background-position: center;
+    height: 85vh;
+    width: 100%;
+    position: relative;
+}
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-align: center;
+  flex-basis: 500px;
+  gap: 20px;
 }
 .function {
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(38 38 38);
   color: whitesmoke;
   padding: 45px;
   font-weight: 700;
@@ -24,15 +35,20 @@ main {
   justify-content: center;
   text-align: center;
   gap: 20px;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
+
 .name {
-  font-family: "LXGW WenKai Mono TC";
+  font-family: "Margarine", sans-serif;
   margin-right: auto;
   font-size: 1.3rem;
+  text-transform: capitalize;
+  text-wrap: nowrap;
+
 }
 .contacts {
-  margin-left: auto;
+  margin-top: 10px;
+  margin-right: auto;
 }
 .btn-contacts {
   background-color: transparent;
@@ -42,4 +58,41 @@ main {
   border: 2px solid whitesmoke;
   border-radius: 5px;
   font-weight: 600;
+  
+}
+.cards{
+  text-transform:uppercase ;
+  font-size: 2.5rem;
+  position: absolute;
+  text-wrap: nowrap;
+}
+.easy-flexbox {
+  background-color: white;
+  padding: 15px 50px;
+  box-shadow: 0 0 10px 3px;
+  font-weight: bolder;
+
+  right: 75px;
+  top: 190px;
+  z-index: 2;
+}
+.responsive {
+  right: 50px;
+  top: 250px;
+  z-index: 1;
+
+  background-color:rgb(236 234 28);
+  font-weight: bolder;
+  padding: 15px 70px;
+  box-shadow: 0 0 10px 3px;
+}
+.navigation-bar {
+  right: 100px;
+  top: 310px;
+  z-index: 0;
+
+  background-color: white;
+  padding: 25px 15px 15px 15px;
+  font-weight: bolder;
+  transform: rotate(355deg);
 }
